Upload final version pending changes from User testing

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
 		<div class="jumbotron border-bottom jumbotron-fluid headerDiv">
 			<div class="container text-center">
-				<h1 class="display-4">Weekday Planner</h1>
-				<p class="lead">A simple planner to keep you on track of your day!</p>
+				<h1 class="display-4">Work Day Planner</h1>
+				<p class="lead">A Very Simple One Day Planner!</p>
 				<p class="lead todaysDate"></p>
 			</div>
 		</div>
@@ -49,7 +49,7 @@
 
 				<div class="input-group col-10 form-group">
 					<textarea
-						id="text9AM"
+						id="hour9AM"
 						class="form-control custom-control textborder"
 						rows="2"
 						style="resize: none"
@@ -70,7 +70,7 @@
 				</div>
 				<div class="input-group col-10 form-group">
 					<textarea
-						id="text10AM"
+						id="hour10AM"
 						class="form-control custom-control textborder"
 						rows="2"
 						style="resize: none"
@@ -91,7 +91,7 @@
 				</div>
 				<div class="input-group col-10 form-group">
 					<textarea
-						id="text11AM"
+						id="hour11AM"
 						class="form-control custom-control textborder"
 						rows="2"
 						style="resize: none"
@@ -111,7 +111,7 @@
 				</div>
 				<div class="input-group col-10 form-group">
 					<textarea
-						id="text12AM"
+						id="hour12AM"
 						class="form-control custom-control textborder"
 						rows="2"
 						style="resize: none"
@@ -131,7 +131,7 @@
 				</div>
 				<div class="input-group col-10 form-group">
 					<textarea
-						id="text1PM"
+						id="hour1PM"
 						class="form-control custom-control textborder"
 						rows="2"
 						style="resize: none"
@@ -151,7 +151,7 @@
 				</div>
 				<div class="input-group col-10 form-group">
 					<textarea
-						id="text2PM"
+						id="hour2PM"
 						class="form-control custom-control textborder"
 						rows="2"
 						style="resize: none"
@@ -171,7 +171,7 @@
 				</div>
 				<div class="input-group col-10 form-group">
 					<textarea
-						id="text3PM"
+						id="hour3PM"
 						class="form-control custom-control textborder"
 						rows="2"
 						style="resize: none"
@@ -191,7 +191,7 @@
 				</div>
 				<div class="input-group col-10 form-group">
 					<textarea
-						id="text4PM"
+						id="hour4PM"
 						class="form-control custom-control textborder"
 						rows="2"
 						style="resize: none"
@@ -211,7 +211,7 @@
 				</div>
 				<div class="input-group col-10 form-group">
 					<textarea
-						id="text5PM"
+						id="hour5PM"
 						class="textborder form-control custom-control"
 						rows="2"
 						style="resize: none"
